Rewrote some of the table generation code and fixed the alignment in numeric cells

--- a/Web/Style/Style.css
+++ b/Web/Style/Style.css
@@ -230,6 +230,11 @@ td.timeCreated
     border: none;
 }
 
+td.numeric
+{
+    text-align: right;
+}
+
 #logo
 {
     margin-top: 50px;
